<resources>
    <string name="app_name">AndroidFundamentals04</string>
    <string name="android_fundamentals">Android Fundamentals</string>
    <string name="this_is_an_edit_text">This is an Edit Text</string>
    <string name="this_is_a_new_edit_text">This is a new EditText</string>
    <string name="notify_me">Notify me :)</string>
    <string name="auto_backup">Auto backup</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_a_green_button">This is a green button</string>
    <string name="this_is_a_green_text_view">This is a green TextView</string>
    <string name="this_is_an_orange_text_view">This is an orange TextView</string>
    <string name="this_is_a_blue_text_view">This is a blue TextView</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="error_validate_email">Please fill the email address</string>
    <string name="error_validate_terms_and_cond">Please accept terms and conditions</string>
    <string name="error_validate_phone">Please fill the phone number</string>
    <string name="submit">Submit</string>
    <string name="selected_spinner">Selected: </string>
    <string name="spinner_pick">Please pick an android version!</string>
    <string name="spinner_example">Spinner Example</string>
    <string name="text">A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.</string>
    <string name="happy_holidays">Happy Holidays!</string>
    <string name="from_adriana">From Adriana</string>
    <string name="have_yourself_a_merry_little_christmas">Have yourself a merry little Christmas, \nLet your heart be light \nFrom now on, our troubles will be out of sight</string>
    <string name="let_it_snow">Let it snow</string>
    <string name="gingles_belles">Gingles Belles</string>
    <string name="go_to_next_activity">Go to next activity</string>
    <string name="url">URL</string>
    <string name="open_website">Open website</string>
    <string name="city">City</string>
    <string name="open_location">Open location</string>
    <string name="message">Message</string>
    <string name="phone_number">Phone number</string>
    <string name="share_text">share text</string>
    <string name="call">Call</string>
    <string name="text_one">Text one</string>
    <string name="text_two">Text two</string>
    <string name="text_three">Text three</string>
    <string name="send">SEND</string>
</resources>
